Revert "update: remove customized package install in run-aqa for windows"
This reverts commit 62e1e2c105cb4e9a7cd5a8d84519ff1f74b72b1c.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,10 @@ jobs:
       matrix:
         os: [windows-latest]
     steps:
+    - name: Disable WSLv1
+      run: |
+        Disable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
+      shell: pwsh
     - uses: actions/checkout@v3
     - name: AQA
       uses: ./
