--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
     - uses: Vampire/setup-wsl@v1
       with:
         distribution: Ubuntu-20.04
+        additional-packages:
+          ant
+          make
     - uses: actions/checkout@v3
     - name: AQA
       uses: ./
@@ -22,3 +25,30 @@ jobs:
         jdksource: 'github-hosted'
         build_list: 'openjdk'
         target: '_jdk_custom'
+  system-on-windows:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest]
+    steps:
+    - uses: Vampire/setup-wsl@v1
+      with:
+        distribution: Ubuntu-20.04
+        additional-packages:
+          ant
+          make
+    - uses: actions/checkout@v3
+    - uses: AdoptOpenJDK/install-jdk@v1
+      with:
+        version: '11'
+        targets: 'JDK_11'
+        impl: 'openj9'
+        source: 'nightly'
+    - name: AQA
+      uses: ./
+      with: 
+        version: '11'
+        jdksource: 'install-jdk'
+        build_list: 'system'
+        target: '_DaaLoadTest_daa1_5m'
